<resources>
    <string name="app_name">Auto Samir Rayan</string>
    <string name="save_kick_boxer_to_server">Save Kick Boxer To Server</string>
    <string name="please_enter_the_kick_power">please enter the kick power</string>
    <string name="please_enter_the_punch_power">please enter the punch power</string>
    <string name="please_enter_the_kick_speed">please enter the kick speed</string>
    <string name="please_enter_the_punch_speed">please enter the punch speed</string>
    <string name="please_enter_the_name_of_kickboxer">Please Enter the Name of KickBoxer</string>
    <string name="get_data_from_server">Get Data From Server</string>
    <string name="get_all_data_from_server">Get All Data From Server</string>
    <string name="switch_to_another_activity">Switch to Another Activity</string>
    <string name="welcome_to_my_activity">Welcome to My Activity</string>
    <string name="sign_up_user">Sign Up User</string>
    <string name="enter_password">Enter password...</string>
    <string name="enter_username">Enter username ...</string>
    <string name="log_in_user">Log In User</string>
    <string name="log_out">Log Out</string>
    <string name="welcome">welcome</string>
    <string name="enter_email_address">enter email address ...</string>
    <string name="samir_rayan_logo">Samir_Rayan_logo</string>
    <string name="sign_up">sign up</string>
    <string name="log_in">log in</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="please_enter_an_email">Please enter an email...</string>
    <string name="please_enter_a_password">Please Enter a password...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_a_profile_name">please enter a profile name...</string>
    <string name="please_enter_your_bio">please enter your bio...</string>
    <string name="please_enter_your_profission">please enter your profission...</string>
    <string name="please_enter_your_hobbies">please enter your hobbies...</string>
    <string name="update_info">Update info</string>
    <string name="please_enter_your_favorite_sport">please enter your favorite sport...</string>
    <string name="loading_users_please_wait">Loading Users ... Please wait...</string>
    <string name="share_image">share image</string>
    <string name="please_entre_a_description_to_your_image">Please entre a description to your image...</string>
    <string name="todo">TODO</string>
</resources>